# multi-ai-model

./: .codexignore  .gitignore  CODEOWNERS  GOVERNANCE_LOG.md  Makefile  Makefile.append.txt  Project_Plan.rtf  README.md  README_AUTONOMY_PHASES.md  ai_attestation.json  codex_task.txt  core_protocol.md  orchestrator_queue.json  pyproject.toml
.github/workflows/: attestation-verify.yml  calibration-backtest.yml  ci.yml  policy-and-math.yml
docs/: github_app_setup.md  hello_autonomy.md  phase2b_notes.md
orchestrator/tasks/: hello.yml
policies/: gates.yml  rules.yml
scripts/: autonomy_orchestrator.py  guarded_merge.sh  orchestrator_loop.sh
src/multiai/: cli.py  cli_main.py
src/multiai/cli/: __init__.py  main.py
src/multiai/collectors/: binance_spot.py  litecoin_node.py  rotate.py
src/multiai/dataops/: merge_on_off.py  merge_on_offchain.py  quantize.py  quantize_1s.py  split_lists.py  split_object_columns.py
src/multiai/orchestrator/: __init__.py  attest.py  cli.py  cli_additions.pyfrag  dispatcher_footer.pyfrag  gateway.py  github_app.py  (+6 more)
state/: pipeline.json
tests/: conftest.py  test_autonomy_orchestrator_script.py  test_cli_main.py  test_github_app_client.py  test_merge.py  test_orchestrator_pipeline.py  test_paper_trading.py  test_quantize.py  test_split.py  test_split_merge.py  test_targets.py  test_whale_tracker.py
tools/: attestation_verify.py  backtest_gates.py  calibration_gates.py  enqueue_from_merged.py  enqueue_pipeline.py  gpt_math_validate.py  llama_guard.py  math_trigger.py  protocol_auditor.py  provenance_emit.py  smoke_queue.py
(+22 files in other folders)
